2006-02-17 George Sherwood <george@beernabeer.com>
	* PRE_BUILD: Added bash31 patch 8
	* DETAILS: Updated PATCHLEVEL
	* bash31-008: Added files

2006-02-08 Eric Sandall <eric@sandall.us>
	* DEPENDS: Depends on smgl-fhs (for directory structure)

2006-02-07 George Sherwood <george@beernabeer.com>
	* DETAILS: Updated PATCHLEVEL

2006-02-06 Eric Sandall <eric@sandall.us>
	* DEPENDS: Depends on gnupg (for SOURCE verification)

2006-02-06 George Sherwood <george@beernabeer.com>
	* PRE_BUILD: Add bash31 patches 6-7
	* bash31-006-bash31-007: Added files

2005-01-15 George Sherwood <george@beernabeer.com>
	* PRE_BUILD: Add bash31 patches 2-5
	* bash31-002-bash31-005: Added files

2005-12-26 George Sherwood <george@beernabeer.com>
	* PRE_BUILD: Added patch for error that breaks sorcery
	* bash31-001: Added file to fix problem with bash 3.1

2005-12-13 George Sherwood <george@beernabeer.com>
	* DETAILS: Updated to 3.1
	* WIP: Added until some testing is done.

2005-12-09 George Sherwood <george@beernabeer.com>
	* DETAILS: Updated to 3.0.16
	* BUILD: Removed incorporated patches
	* bash-3.0-avoid_WCONTINUED-1.patch: deleted
	* bash-3.0-display_wrap-1.patch: deleted

2005-10-13 Eric Sandall <eric@sandall.us>
	* bash-3.0.tar.gz.sig,bash-doc-3.0.tar.gz.sig: Updated to sha512 hash

2005-09-26 Eric Sandall <eric@sandall.us>
	* DETAILS: Updated UPDATED
	* INSTALL: Added some missing SCRIPT_DIRECTORY references and two missing
	  '\' continuations for the if statements (thanks to David Brown)

2005-09-25 Eric Sandall <eric@sandall.us>
	* DETAILS: Updated UPDATED
	* bashrc: Set PS1 (doesn't fall over from profile, thanks Arwed)
	* bash_logout: Moved to skel/bash_logout with the other skeleton files
	* INSTALL,FINAL: Move installation of shell files from FINAL to INSTALL
	  and use install_config_file so they're tracked (Bug #9473)
	  Added profile.d/ with all the profile.d scripts (dummy, editor.sh,
	  lc.sh) and removed the pop_script(), popld_script, pop_two(),