@@ -1,0 +1,43 @@
+#This file is used to define various locale information
+#All variables here take on the definition of a locale
+#name i.e.(en_US, fi_FI@EURO, sl_SI.UTF-8), defaults to C
+#As per ISO-14652
+
+#Default value for unset variables
+LANG="C"
+    
+#This overrides all others no matter to what they are set
+LC_ALL=
+
+#Character classification, case conversion and code transformation.
+LC_CTYPE=
+
+#Formats of informative and diagnostic messages and interactive responses.
+LC_MESSAGES=
+
+#Collation order.
+LC_COLLATE=
+
+#Numeric, non-monetary formatting.
+LC_NUMERIC=
+
+#Monetary formatting.
+LC_MONETARY=
+
+#Date and time formats.
+LC_TIME=
+
+#Paper format
+LC_PAPER=
+
+#Format of writing personal names
+LC_NAME=
+
+#Format of postal addresses
+LC_ADDRESS=
+
+#Format for telephone numbers, and other telephone information
+LC_TELEPHONE=
+
+#Information on measurement system
+LC_MEASUREMENT=
