@@ -1,3 +1,9 @@
+2006-02-18 Andrew "ruskie" Levstik <ruskie@mages.ath.cx>
+        * profile.d/locale.conf: configuration file for lc.sh
+	* profile.d/lc.sh: sources locale from sysconfig
+	* INSTALL: installation of init.d/locale.conf
+	* DETAILS: increased PATCHLEVEL
+
 2006-02-17 George Sherwood <george@beernabeer.com>
 	* PRE_BUILD: Added bash31 patch 8
 	* DETAILS: Updated PATCHLEVEL
